--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
-<html>
-    <head>
+Listen.
 
-    </head>
-    <body>
-        <h1>It isn't that easy. It's her.</h1>
-    </body>
-</html>
+There were people sitting all over the stone-flagged floor,
+and other people, packed tightly together, were sitting on
+metal bunks, one above the other. Winston and his mother
+and father found themselves a place on the floor, and near
+them an old man and an old woman were sitting side by
+side on a bunk. The old man had on a decent dark suit and
+a black cloth cap pushed back from very white hair: his
+face was scarlet and his eyes were blue and full of tears. He
+reeked of gin. It seemed to breathe out of his skin in place
+of sweat, and one could have fancied that the tears welling
+from his eyes were pure gin. But though slightly drunk he
+was also suffering under some grief that was genuine and
+unbearable. In his childish way Winston grasped that some
+terrible thing, something that was beyond forgiveness and
+could never be remedied, had just happened. It also seemed
+to him that he knew what it was. Someone whom the old
+man loved—a little granddaughter, perhaps—had been
+killed. Every few minutes the old man kept repeating:
+’We didn’t ought to ‘ave trusted ‘em. I said so, Ma, didn’t I?
+That’s what comes of trusting ‘em. I said so all along. We
+didn’t ought to ‘ave trusted the buggers.’
